--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<html><head><p1>Dteyn's Stuff</p1></head></html>
+<html>
+  <head>
+    <h1>Dteyn's Stuff</h1>
+    <a href="https://dteyn.github.io/sf2000_projects.htm">SF2000 Projects</a>
+  </head>
+</html>
