--- a/sf2000_projects.htm
+++ b/sf2000_projects.htm
@@ -56,6 +56,14 @@
 
     <!-- Project List -->
     <div class="project-list">
+	    <!-- SNES Emulator Fix -->
+        <div class="project-item">
+            <h2>SF2000 SNES Emulator Fix</h2>
+            <p>A tool to fix the SNES emulator on the SF2000 handheld, so that games run at full speed ont the first launch</p>
+			<p>Full credit to <b>bnister</b> on the Retro Handhelds Discord who posted the details about this patch. Thank you for your hard work!</p>
+            <a href="https://dteyn.github.io/sf2000/tools/snesEmulatorFix.htm">SF2000 SNES Emulator Fix - Web Based Tool</a>
+        </div>
+		
         <!-- SF2000 Silent Sounds Project -->
         <div class="project-item">
             <h2>SF2000 Silent Sounds Pack</h2>
